css/github-markdown.css
/* ... */
.markdown-body .lh-condensed {
line-height:1.25!important
}

.markdown-body .text-bold {
font-weight:600!important
}

.markdown-body:before {
content:"";
    display:table
}

.markdown-body:after {
clear:both;
    content:"";
    display:table
}

.markdown-body>:first-child {
margin-top:0!important
}

.markdown-body>:last-child {
margin-bottom:0!important
}

.markdown-body a:not([href]) {
color:inherit;
    text-decoration:none
}

.markdown-body blockquote,.markdown-body dl,.markdown-body ol,.markdown-body p,.markdown-body pre,.markdown-body table,.markdown-body ul {
margin-bottom:16px;
    margin-top:0
}

.markdown-body blockquote>:first-child {
margin-top:0
}

.markdown-body blockquote>:last-child {
margin-bottom:0
}

.markdown-body kbd {
background-color:#fafbfc;
    border:1px solid #d1d5da;
    border-bottom-color:#c6cbd1;
    border-radius:3px;
    box-shadow:inset 0 -1px 0 #c6cbd1;
    color: var(--text-secondary);
    display:inline-block;
    font:11px SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    line-height:10px;
    padding:3px 5px;
    vertical-align:middle
}

.markdown-body ol ol,.markdown-body ol ul,.markdown-body ul ol,.markdown-body ul ul {
margin-bottom:0;
    margin-top:0
}

.markdown-body li {
word-wrap:break-all
}

.markdown-body li>p {
margin-top:16px
}

.markdown-body li+li {
margin-top:.25em
}

.markdown-body dl {
padding:0
}

.markdown-body dl dt {
font-size:1em;
    font-style:italic;
    font-weight:600;
    margin-top:16px;
    padding:0
}

.markdown-body dl dd {
margin-bottom:16px;
    padding:0 16px
}

.markdown-body table th {
font-weight:600
}

.markdown-body table td,.markdown-body table th {
border:1px solid #dfe2e5;
    padding:6px 13px
}

.markdown-body table tr {
background-color:var(--bg-primary);
    border-top:1px solid #c6cbd1
}

.markdown-body table tr:nth-child(2n) {
background-color:#f6f8fa
}

.markdown-body img[align=right] {
padding-left:20px
}

.markdown-body img[align=left] {
padding-right:20px
}

.markdown-body .refer-holder {
width: 90%;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: var(--bg-secondary);
    border-left: var(--text-link) 10px solid;
    color: var(--text-primary);
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body .refer-holder:hover {
color: var(--text-link-hover);
}

.markdown-body .code-holder {
    counter-reset: codeline;
    width: 100%;
    height: auto;
    border-radius: 3px;
    margin: 0 auto;
    padding: 10px;
    border-width: 1px;
    border-color: var(--border-color);
    border-style: solid;
}

.markdown-body .code-holder code {
white-space: pre-wrap;
    line-height: 1;
    font-size: 0.8em;
    display: block;
    background-color:rgba(27,31,35,.05);
    border-radius:3px;
    font-size:85%;
    margin:0;
    padding:.2em .4em;
    color:var(--text-primary);
    transition: color 0.3s ease-in-out; transition-delay: 0.5s;
}

.markdown-body .code-holder code:hover {
color:#006ebc;
}

.markdown-body .math-holder {
width: 90%;
    text-align: center;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: rgba(27,31,35,.05);
    border-style: solid;
    color: var(--text-primary);
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body pre>code {
background:0 0;
    border:0;
    font-size:100%;
    margin:0;
    padding:0;
    white-space:pre;
    word-break:normal
}

.markdown-body .highlight {
margin-bottom:16px
}

.markdown-body .highlight pre {
margin-bottom:0;
    word-break:normal
}

.markdown-body .highlight pre,.markdown-body pre {
background-color:#f6f8fa;
    border-radius:3px;
    font-size:85%;
    line-height:1.45;
    overflow:auto;
    padding:16px
}

.markdown-body pre code {
background-color:transparent;
    border:0;
    display:inline;
    line-height:inherit;
    margin:0;
    max-width:auto;
    overflow:visible;
    padding:0;
    word-wrap:normal
}

.markdown-body .commit-tease-sha {
color: var(--text-secondary);
    display:inline-block;
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:90%
}

.markdown-body .blob-wrapper {
border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    overflow-x:auto;
    overflow-y:hidden
}

.markdown-body .blob-wrapper-embedded {
max-height:240px;
    overflow-y:auto
}

.markdown-body .blob-num {
-moz-user-select:none;
    -ms-user-select:none;
    -webkit-user-select:none;
    color:rgba(27,31,35,.3);
    cursor:pointer;
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:12px;
    line-height:20px;
    min-width:50px;
    padding-left:10px;
    padding-right:10px;
    text-align:right;
    user-select:none;
    vertical-align:top;
    white-space:nowrap;
    width:1%
}

.markdown-body .blob-num:hover {
color:rgba(27,31,35,.6)
}

.markdown-body .blob-num:before {
content:attr(data-line-number)
}

.markdown-body .blob-code {
line-height:20px;
    padding-left:10px;
    padding-right:10px;
    position:relative;
    vertical-align:top
}

.markdown-body .blob-code-inner {
color: var(--text-primary);
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:12px;
    overflow:visible;
    white-space:pre;
    word-wrap:normal
}

.markdown-body .pl-token.active,.markdown-body .pl-token:hover {
background:#ffea7f;
    cursor:pointer
}

.markdown-body :checked+.radio-label {
border-color:#0366d6;
    position:relative;
    z-index:1
}

.markdown-body .tab-size[data-tab-size="1"] {
-moz-tab-size:1;
    tab-size:1
}

.markdown-body .tab-size[data-tab-size="2"] {
-moz-tab-size:2;
    tab-size:2
}

.markdown-body .tab-size[data-tab-size="3"] {
-moz-tab-size:3;
    tab-size:3
}

.markdown-body .tab-size[data-tab-size="4"] {
-moz-tab-size:4;
    tab-size:4
}

.markdown-body .tab-size[data-tab-size="5"] {
-moz-tab-size:5;
    tab-size:5
}
/* ... */

